hoppscotch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoppscotch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoppscotch
  template:
    metadata:
      labels:
        app: hoppscotch
    spec:
      initContainers:
      - name: prisma-migrate
        image: hoppscotch/hoppscotch:2024.8.2
        command: ["sh", "-c", "pnpx prisma migrate deploy"]
        envFrom:
        - configMapRef:
            name: hoppscotch-config
      containers:
      - name: hoppscotch
        image: hoppscotch/hoppscotch
        ports:
        - containerPort: 3000
        - containerPort: 3100
        - containerPort: 3170
        envFrom:
        - configMapRef:
            name: hoppscotch-config
        restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: hoppscotch
spec:
  ports:
  - port: 3000
    targetPort: 3000
  - port: 3100
    targetPort: 3100
  - port: 3170
    targetPort: 3170
  selector:
    app: hoppscotch
