ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hoppscotch-ingress
#   namespace: hoppscotch
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     nginx.ingress.kubernetes.io/enable-cors: "true"  # Enabling CORS, if required
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: hoppscotch.fintech23.xyz
#     http:
#       paths:
#       - backend:
#           service:
#             name: hoppscotch-frontend
#             port:
#               number: 3000
#         path: /
#         pathType: Prefix
#   - host: hoppscotch-backend.fintech23.xyz
#     http:
#       paths:
#       - backend:
#           service:
#             name: hoppscotch-backend
#             port:
#               number: 3170
#         path: /
#         pathType: Prefix
#   - host: hoppscotch-admin.fintech23.xyz
#     http:
#       paths:
#       - backend:
#           service:
#             name: hoppscotch-admin
#             port:
#               number: 3100
#         path: /
#         pathType: Prefix
#   tls:
#   - hosts:
#     - hoppscotch-backend.fintech23.xyz
#     secretName: fintech23xyz-ingress-tls
# status:
#   loadBalancer:
#     ingress:
#     - ip: 172.16.231.14


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"hoppscotch-ingress","namespace":"hoppscotch"},"spec":{"ingressClassName":"nginx","rule>
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2024-09-08T06:47:34Z"
  generation: 2
  name: hoppscotch-ingress
  namespace: hoppscotch
  resourceVersion: "316858300"
  uid: b5f3257c-0413-4168-a8b9-71e336ebbc3b
spec:
  ingressClassName: nginx
  rules:
  - host: hoppscotch-frontend.devbsfintech23.com
    http:
      paths:
      - backend:
          service:
            name: hoppscotch-frontend
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: hoppscotch-backend.devbsfintech23.com
    http:
      paths:
      - backend:
          service:
            name: hoppscotch-backend
            port:
              number: 3170
        path: /graphql
        pathType: Prefix
  - host: hoppscotch-admin.devbsfintech23.com
    http:
      paths:
      - backend:
          service:
            name: hoppscotch-admin
            port:
              number: 3100
        path: /
        pathType: Prefix
  # - host: ab-customer-web.fintech23.xyz
  #   http:
  #     paths:
  #     - backend:
  #         service:
  #           name: ab-customer-web-portal-service
  #           port:
  #             number: 80
  #       path: /
  #       pathType: Prefix
  # tls:
  # - hosts:
  #   - ab-customer-web.fintech23.xyz
  #   secretName: fintech23xyz-ingress-tls
status:
  loadBalancer:
    ingress:
    - ip: 172.16.231.14
